@@ -1,136 +1,115 @@
 package ITmonteur.example.hospitalERP.services;
 
-import ITmonteur.example.hospitalERP.dto.DoctorDTO;
+import ITmonteur.example.hospitalERP.dto.EntityMapper;
 import ITmonteur.example.hospitalERP.dto.PtInfoDTO;
-import ITmonteur.example.hospitalERP.entities.Doctor;
 import ITmonteur.example.hospitalERP.entities.PtInfo;
-import ITmonteur.example.hospitalERP.entities.Specialist;
+import ITmonteur.example.hospitalERP.entities.Role;
+import ITmonteur.example.hospitalERP.entities.User;
+import ITmonteur.example.hospitalERP.exception.BadRequestException;
 import ITmonteur.example.hospitalERP.exception.ResourceNotFoundException;
-import ITmonteur.example.hospitalERP.repositories.DoctorRepository;
 import ITmonteur.example.hospitalERP.repositories.PtInfoRepository;
-import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
+import ITmonteur.example.hospitalERP.repositories.UserRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
+// Patient profile. "ptId" parameters are the patient's *user* id (as issued in the JWT).
 @Service
 public class PtInfoService {
 
     private static final Logger logger = LoggerFactory.getLogger(PtInfoService.class);
 
-    @Autowired
-    private PtInfoRepository ptInfoRepository;
+    private final PtInfoRepository ptInfoRepository;
+    private final UserRepository userRepository;
+    private final CurrentUserService currentUserService;
+    private final FileStorageService fileStorageService;
+    private final UserAccountService userAccountService;
 
-    @Autowired
-    private DoctorRepository doctorRepository;
+    public PtInfoService(PtInfoRepository ptInfoRepository, UserRepository userRepository,
+                         CurrentUserService currentUserService, FileStorageService fileStorageService,
+                         UserAccountService userAccountService) {
+        this.ptInfoRepository = ptInfoRepository;
+        this.userRepository = userRepository;
+        this.currentUserService = currentUserService;
+        this.fileStorageService = fileStorageService;
+        this.userAccountService = userAccountService;
+    }
 
-    @Autowired
-    private ModelMapper modelMapper;
-
-    // Get all patients info
+    // Get all patients info (admin / receptionist)
     public List<PtInfoDTO> getAllPtInfo() {
-        logger.info("Fetching all patient information");
-        List<PtInfo> ptInfos = ptInfoRepository.findAll();
-        List<PtInfoDTO> ptInfoDTOS = ptInfos.stream()
-                .map(ptInfo -> {
-                    PtInfoDTO dto = convertToDto(ptInfo);
-                    dto.setAppointment(null);
-                    return dto;
-                })
-                .collect(Collectors.toList());
-        logger.info("Total patients retrieved: {}", ptInfoDTOS.size());
-        return ptInfoDTOS;
-    }
-    public List<DoctorDTO> findDoctorsBySpecialization(Specialist specialization){
-        logger.info("Fetching all doctors ");
-        List<Doctor> doctors = this.doctorRepository.findBySpecialist(specialization)
-                .orElseThrow(()-> new RuntimeException("Doctors not found with specialization :"+specialization));
-        List<DoctorDTO> doctorDTOS = doctors.stream()
-                .map(doctor ->{
-                    DoctorDTO doctorDTO = convertToDto(doctor);
-                    return doctorDTO;
-                })
-                .collect(Collectors.toList());
-        logger.info("Total doctors retrieved: {}", doctorDTOS.size());
-        return doctorDTOS;
-
+        return ptInfoRepository.findAll().stream().map(EntityMapper::toPtInfoDTO).toList();
     }
 
-    // Get patient info by ID
-    public PtInfoDTO getPtInfoById(long ptId) {
-        logger.info("Fetching patient information with ID: {}", ptId);
-        try {
-            PtInfo ptInfo = ptInfoRepository.findByUser_Id(ptId)
-                    .orElseThrow(() -> new ResourceNotFoundException("Patient", "patientID", ptId));
-            PtInfoDTO ptInfoDTO = convertToDto(ptInfo);
-            logger.info("Patient information retrieved: {}", ptInfoDTO.getPatientName());
-            return ptInfoDTO;
-        } catch (ResourceNotFoundException e) {
-            logger.warn("Patient not found with ID: {}", ptId);
-            throw e;
-        } catch (Exception e) {
-            logger.error("Error fetching patient information with ID {}: {}", ptId, e.getMessage(), e);
-            throw e;
+    // Get patient info by user ID (the patient themself or an admin)
+    public PtInfoDTO getPtInfoById(long userId) {
+        currentUserService.requireSelfOrRole(userId, Role.ADMIN);
+        return EntityMapper.toPtInfoDTO(patientByUserId(userId));
+    }
+
+    // Deletes the patient account, their relatives and appointments (self or admin)
+    public boolean deletePtInfoById(long userId) {
+        currentUserService.requireSelfOrRole(userId, Role.ADMIN);
+        userAccountService.deleteUser(userId);
+        return true;
+    }
+
+    // Update patient info by user ID (self or admin). Username cannot be changed here.
+    @Transactional
+    public PtInfoDTO updatePtInfoById(PtInfoDTO dto, long userId, MultipartFile profileImage) {
+        currentUserService.requireSelfOrRole(userId, Role.ADMIN);
+        PtInfo ptInfo = patientByUserId(userId);
+
+        if (dto.getPatientName() != null && !dto.getPatientName().isBlank()) {
+            ptInfo.setPatientName(dto.getPatientName().trim());
         }
-    }
-
-    // Delete patient info by ID
-    public boolean deletePtInfoById(long ptId) {
-        logger.info("Deleting patient information with ID: {}", ptId);
-        try {
-            ptInfoRepository.deleteById(ptId);
-            logger.info("Patient information deleted successfully for ID: {}", ptId);
-            return true;
-        } catch (Exception e) {
-            logger.error("Error deleting patient information with ID {}: {}", ptId, e.getMessage(), e);
-            return false;
+        if (dto.getEmail() != null && !dto.getEmail().isBlank()) {
+            ptInfo.setEmail(dto.getEmail().trim());
         }
-    }
-
-    // Update patient info by ID
-    public PtInfoDTO updatePtInfoById(PtInfoDTO ptInfoDTO, long ptId) {
-        logger.info("Updating patient information with ID: {}", ptId);
-        try {
-            PtInfo ptInfo = ptInfoRepository.findByUser_Id(ptId)
-                    .orElseThrow(() -> new RuntimeException("Patient not found with ID: " + ptId));
-
-            ptInfo.setPatientName(ptInfoDTO.getPatientName()); //ptInfoDTO = ptInfoReqquestDTO
-            ptInfo.setDob(ptInfoDTO.getDob());
-            ptInfo.setEmail(ptInfoDTO.getEmail());
-            ptInfo.setGender(ptInfoDTO.getGender());
-            ptInfo.setContactNo(ptInfoDTO.getContactNo());
-            ptInfo.setPatientAadharNo(ptInfoDTO.getPatientAadharNo());
-            ptInfo.setPatientAddress(ptInfoDTO.getPatientAddress());
-            ptInfo.setUserName(ptInfoDTO.getUserName());
-            // ptInfo.setAppointment(ptInfoDTO.getAppointment());
-            if (ptInfoDTO.getProfileImage() != null && !ptInfoDTO.getProfileImage().isEmpty()) {
-                ptInfo.setProfileImage(ptInfoDTO.getProfileImage());
+        if (dto.getDob() != null) {
+            if (dto.getDob().isAfter(LocalDate.now())) {
+                throw new BadRequestException("Date of birth cannot be in the future");
             }
-
-            PtInfoDTO updatedPtInfo = convertToDto(ptInfoRepository.save(ptInfo));
-            logger.info("Patient information updated successfully for ID: {}", ptId);
-            return updatedPtInfo;
-
-        } catch (Exception e) {
-            logger.error("Error updating patient information with ID {}: {}", ptId, e.getMessage(), e);
-            throw e;
+            ptInfo.setDob(dto.getDob());
         }
+        if (dto.getGender() != null) {
+            ptInfo.setGender(dto.getGender());
+        }
+        if (dto.getContactNo() != null && !dto.getContactNo().isBlank()) {
+            ptInfo.setContactNo(dto.getContactNo().trim());
+        }
+        if (dto.getPatientAadharNo() != null && dto.getPatientAadharNo() != 0) {
+            if (String.valueOf(dto.getPatientAadharNo()).length() != 12) {
+                throw new BadRequestException("Aadhaar number must have 12 digits");
+            }
+            ptInfo.setPatientAadharNo(dto.getPatientAadharNo());
+        }
+        if (dto.getPatientAddress() != null) {
+            ptInfo.setPatientAddress(dto.getPatientAddress());
+        }
+        if (profileImage != null && !profileImage.isEmpty()) {
+            ptInfo.setProfileImage(fileStorageService.storeProfileImage(profileImage));
+        }
+        // Keep the login account's contact details in sync with the profile
+        User user = ptInfo.getUser();
+        if (user != null) {
+            user.setEmail(ptInfo.getEmail());
+            if (ptInfo.getContactNo() != null) {
+                user.setPhoneNumber(ptInfo.getContactNo());
+            }
+            userRepository.save(user);
+        }
+        PtInfoDTO updated = EntityMapper.toPtInfoDTO(ptInfoRepository.save(ptInfo));
+        logger.info("Patient profile updated for user {}", userId);
+        return updated;
     }
 
-    // Convert entity to DTO
-    private PtInfoDTO convertToDto(PtInfo ptInfo) {
-        return modelMapper.map(ptInfo, PtInfoDTO.class);
-    }
-
-    // Convert DTO to entity
-    private PtInfo covertToEntities(PtInfoDTO ptInfoDTO) {
-        return modelMapper.map(ptInfoDTO, PtInfo.class);
-    }
-    private DoctorDTO convertToDto(Doctor doctor) {
-        return modelMapper.map(doctor, DoctorDTO.class);
+    private PtInfo patientByUserId(long userId) {
+        return ptInfoRepository.findByUser_Id(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("Patient", "userId", userId));
     }
 }
